--- a/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/Тема 2.10 .md
+++ b/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/Тема 2.10 .md
@@ -88,45 +88,45 @@
 
 ## 3.1 Обход банковской системы двухфакторной аутентификации3.2 Пример веб-инжекта для вконтакте
 
-\1.   В момент захода в систему “банкклиент” веб-инжект требует ввести во внедренное на веб-страницу банка окно номер мобильного телефона для продолжения работы
+1.   В момент захода в систему “банкклиент” веб-инжект требует ввести во внедренное на веб-страницу банка окно номер мобильного телефона для продолжения работы
 
-\2.   На мобильный телефон приходит СМС со ссылкой на установку банковского троянца на Android 
+2.   На мобильный телефон приходит СМС со ссылкой на установку банковского троянца на Android 
 
-\3.   Клиент вводит свои учетные данные в форму на странице банка, вся информация передается злоумышленникам
+3.   Клиент вводит свои учетные данные в форму на странице банка, вся информация передается злоумышленникам
 
-\4.   Мобильный троянец перехватывает СМС с одноразовым паролем от банка и пересылает его злоумышленникам
+4.   Мобильный троянец перехватывает СМС с одноразовым паролем от банка и пересылает его злоумышленникам
 
 ## 3.2 Методы
 
-·    Сменные носители информации
+*   Сменные носители информации
 
-·    Вредоносные почтовые рассылки
+*   Вредоносные почтовые рассылки
 
-·    Уязвимости ПО
+*   Уязвимости ПО
 
-·    Социальная инженерия, фишинг
+*   Социальная инженерия, фишинг
 
-·    MitM атаки
+*   MitM атаки
 
 ### 3.2.1 Методы проникновения
 
-·    Дроппер - модуль, осуществляющий извлечение содержащихся в нем модулей вируса, их распаковку и установку
+*   Дроппер - модуль, осуществляющий извлечение содержащихся в нем модулей вируса, их распаковку и установку
 
-·    Инфектор - модуль, осуществляющий заражение файловых объектов путем изменения их внутренней структуры
+*   Инфектор - модуль, осуществляющий заражение файловых объектов путем изменения их внутренней структуры
 
-·    Инжектор - модуль, реализующий встраивание вредоносных компонент в процесс другого приложения
+*   Инжектор - модуль, реализующий встраивание вредоносных компонент в процесс другого приложения
 
-·    Лоадер - модуль, осуществляющий загрузку других модулей
+*   Лоадер - модуль, осуществляющий загрузку других модулей
 
 ### 3.2.2 Методы заражения (Стандартные методы заражения (Kasp))
 
-·    Дроппер - модуль, осуществляющий извлечение содержащихся в нем модулей вируса, их распаковку и установку
+*   Дроппер - модуль, осуществляющий извлечение содержащихся в нем модулей вируса, их распаковку и установку
 
-·    Инфектор - модуль, осуществляющий заражение файловых объектов путем изменения их внутренней структуры
+*   Инфектор - модуль, осуществляющий заражение файловых объектов путем изменения их внутренней структуры
 
-·    Инжектор - модуль, реализующий встраивание вредоносных компонент в процесс другого приложения
+*   Инжектор - модуль, реализующий встраивание вредоносных компонент в процесс другого приложения
 
-·    Лоадер - модуль, осуществляющий загрузку других модулей
+*   Лоадер - модуль, осуществляющий загрузку других модулей
 
  
 
@@ -154,15 +154,15 @@
 
  
 
-·    Любое сообщение об ошибке компьютера указывает на заражение вирусом. Это неверно: сообщения об ошибках также могут быть вызваны ошибками аппаратного или программного обеспечения.
+*   Любое сообщение об ошибке компьютера указывает на заражение вирусом. Это неверно: сообщения об ошибках также могут быть вызваны ошибками аппаратного или программного обеспечения.
 
-·    Вирусам и червям всегда требуется взаимодействие с пользователем. Это не так. Для того чтобы вирус заразил компьютер, должен быть исполнен код, но это не требует участия пользователя. Например, сетевой червь может заражать компьютеры пользователей автоматически, если на них имеются определенные уязвимости.
+*   Вирусам и червям всегда требуется взаимодействие с пользователем. Это не так. Для того чтобы вирус заразил компьютер, должен быть исполнен код, но это не требует участия пользователя. Например, сетевой червь может заражать компьютеры пользователей автоматически, если на них имеются определенные уязвимости.
 
-·    Вложения к электронным письмам от известных отправителей являются безопасными. Это не так, потому что эти вложения могут быть заражены вирусом и использоваться для распространения заражения. Даже если вы знаете отправителя, не открывайте ничего, что в чем вы не уверены.
+*   Вложения к электронным письмам от известных отправителей являются безопасными. Это не так, потому что эти вложения могут быть заражены вирусом и использоваться для распространения заражения. Даже если вы знаете отправителя, не открывайте ничего, что в чем вы не уверены.
 
-·    Антивирусные программы могут предотвратить заражение. Со своей стороны, поставщики антивирусного ПО делают все возможное, чтобы не отставать от разработчиков вредоносных программ, но пользователям обязательно следует установить на своем компьютере комплексное защитное решение класса Internet security, который включает в себя технологии, специально предназначенные для активного блокирования угроз. Даже при том, что 100-процентной защиты не существует. Нужно просто осознанно подходить к обеспечению собственной онлайн-безопасности, чтобы уменьшить риск подвергнуться атаке.
+*   Антивирусные программы могут предотвратить заражение. Со своей стороны, поставщики антивирусного ПО делают все возможное, чтобы не отставать от разработчиков вредоносных программ, но пользователям обязательно следует установить на своем компьютере комплексное защитное решение класса Internet security, который включает в себя технологии, специально предназначенные для активного блокирования угроз. Даже при том, что 100-процентной защиты не существует. Нужно просто осознанно подходить к обеспечению собственной онлайн-безопасности, чтобы уменьшить риск подвергнуться атаке.
 
-·    Вирусы могут нанести физический ущерб вашему компьютеру. Что если вредоносный код приведет к перегреву компьютера или уничтожит критически важные микрочипы? Поставщики защитных решений неоднократно развенчивали этот миф - такие повреждения просто невозможны.
+*   Вирусы могут нанести физический ущерб вашему компьютеру. Что если вредоносный код приведет к перегреву компьютера или уничтожит критически важные микрочипы? Поставщики защитных решений неоднократно развенчивали этот миф - такие повреждения просто невозможны.
 
 Между тем, рост количества устройств взаимодействующих друг с другом в Интернете Вещей (IoT), открывает дополнительные интересные возможности: что если зараженный автомобиль съедет с дороги, или зараженная «умная» печь продолжит нагреваться, пока не случится превышение нормальной нагрузки? Вредоносного ПО будущего может сделать такой физический ущерб реальностью.
 
