--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.2/3.2.md
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.2/3.2.md
@@ -3,11 +3,11 @@ typora-copy-images-to: ./
 typora-root-url: ./
 ---
 
-ТЕМА 3.2
+[TOC]
 
 
 
-ФОpМАТИpОВАНИЕ ДОКУМЕНТА html СpЕДСТВАМИ CSS
+# Тема 3.2 Форматирование документа HTML средствами CSS
 
 
 
@@ -814,11 +814,11 @@ background-position: center; background-attachment: fixed}
 
 если указано значение 100% 100%, то в этом случае правый нижний угол изображения совмещается с правым нижним углом области отступов стилевого блока.
 
-## 2. В единицах длины.
+## В единицах длины.
 
 Здесь все просто. Пара значений, например 20рх 15рх, показывает, что левый верхний угол изображения будет смещен на 20 пикселов вправо относительно левого верхнего угла области отступов и на 15 пикселов вниз.
 
-## 3. С помощью ключевых слов top, center, bottom, right и left.
+##  С помощью ключевых слов top, center, bottom, right и left.
 
 В этом случае положение фоновой картинки может быть задано одной из следующих комбинаций.
 
