--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.2/3.2.md
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.2/3.2.md
@@ -356,33 +356,23 @@ p {padding: 10рх 10рх 10рх 10рх; border-width: 5px thin 5px thin; border
 
 Для границ должен быть также задан тип линии, которой она отображается. Ниже приведены допустимые в CSS2 названия типов и описан соответствующий им видимый результат:
 
-none граница определена как отсутствующая. При таком задании значение
+* none граница определена как отсутствующая. При таком задании значение
 
-border-width устанавливается равным нулю;
+* border-width устанавливается равным нулю;
 
-solid граница будет отображаться в виде одной сплошной линии. Если
+* solid граница будет отображаться в виде одной сплошной линии. Если атрибут border-width не задан, то по умолчанию используется значение border-width: medium;
 
-атрибут border-width не задан, то по умолчанию используется значение border-width: medium;
+* double граница будет очерчена двумя сплошными линиями. Причем свойство border-width будет показывать суммарную толщину двух этих линий и расстояния между ними;
 
-double граница будет очерчена двумя сплошными линиями. Причем свойство border-width
+* dotted граница будет отображена в виде пунктирной линии;
 
+* groove граница будет показана как вдавленная линия;
 
+* ridge . граница будет отображены в виде выпуклой линии;
 
-будет показывать суммарную толщину двух этих линий и расстояния между ними;
+inset при задании такого типа границ, весь блок будет отображен как вдавленный;
 
-dotted граница будет отображена в виде пунктирной линии;
-
-groove граница будет показана как вдавленная линия;
-
-ridge . граница будет отображены в виде выпуклой линии;
-
-inset при задании такого типа границ, весь блок будет отображен как
-
-вдавленный;
-
-outset указание этого значения при задании типа границ приведет к тому,
-
-что весь блок будет отображен как выпуклый.
+* outset указание этого значения при задании типа границ приведет к тому,что весь блок будет отображен как выпуклый.
 
 
 
@@ -621,7 +611,7 @@ text-align:justify; border-color:darkgray; border-width:50
 <body bgcolor=white>
 
 <h3 align=center>3a6aвныe музыканты</h3>
-
+```
 В музыке каждый понимает по мере веса слона, в свое время наступившего ребенку на ухо. Президент США Улисс Симпсон Грант, тот, который
 
 с полтинника, вообще говорил, что знает только две мелодии, одна из
@@ -679,7 +669,7 @@ background-image: URL (my imageaaa32.jpg)}
 <SpAN>Борис Бурда</SpAN>
 
 </body>
-```
+
 ![img](/clip_image023.jpg)
 
 ### Свойство background-repeat
@@ -756,9 +746,9 @@ padding:40; border:solid gray thin; text-align:center}
 
 Свойство background-attachment устанавливает, будет ли фоновое изображение фиксироваться в окне браузера или будет прокручиваться вместе с документом в процессе его прокрутки. Это свойство имеет смысл только для фоновых изображений элементов, для которых предусмотрены полосы прокрутки (элементы body и FRAME). Если изображение указано как зафиксированое, то содержимое элемента как бы проплывает над ним при прокрутке. В противном случае фоновое изображение (обычно продублированное) будет прокручиваться вместе с документом. Для задания параметров фиксации используются следующие значения свойства background-attachment:
 
-fixed — фоновое изображение задается как зафиксированное;
+`fixed — фоновое изображение задается как зафиксированное;`
 
-scroll — фоновое изображение будет прокручиваться вместе с документом. По умолчанию используется значение scroll.
+`scroll — фоновое изображение будет прокручиваться вместе с документом. По умолчанию используется значение scroll.`
 
 
 
@@ -870,12 +860,6 @@ background: url (/image/bg.igf) 0%0% repeat scroll}
 
 
 ```html
- 
-
- 
-
- 
-
 <html>
 
 <head>
@@ -1334,23 +1318,3 @@ font-family: "MyFont"; font-size: 12ptt
 * Греческие шрифты: MS Courier New, Everson Mono;
 * Кириллические шрифты: ER Kurier, Everson Mono;
 * Японские шрифты: Osaka Monospaced.
-
-31.44.247.236:18617
-217.150.73.123:9221
-5.167.6.205:48214
-5-199-198-229.k-telecom.org:6049
-94.230.161.77:4703
-88.212.40.193:52455
-94.233.144.95:1994
-10.59.227.246:49653
-188.226.67.97:55341
-188.168.4.32:64647
-178.209.94.220:12850
-5.57.11.59:11470
-88.135.62.1:54191
-61.170.247.91:33624
-85.107.85.222:51521
-95.161.239.27:55964
-88.230.179.16:24839
-128-69-60-238.broadband.corbina.ru:29648
-212.111.203.250:26084
