--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.2/3.2.md
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.2/3.2.md
@@ -842,7 +842,7 @@ background: url (/image/bg.igf) 0%0% repeat scroll}
 
 
 
-#  pазметка текста
+#  Разметка текста
 
 Итак, со стилевыми блоками и их цветовыми и фоновыми характеристиками разобрались. Теперь остается описать разметку текста, располагающегося в информативной области блоков. С помощью средств языка CSS2 можно задать отступы и высоту строк в текстовых фрагментах, расстояния между словами и буквами. Возможности CSS2 также позволяют трансформировать текст, написанный строчными буквами в прописной текст, и наоборот. С помощью свойства text-decoration можно указать подчеркивание, зачеркивание или надчеркивание текста. Описание всего этого букета возможностей и составляет данный раздел книги.
 
