--- a/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/Тема 2.10 Сайт+Список Интернет-ресурсов+аннотация.md
+++ b/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/Тема 2.10 Сайт+Список Интернет-ресурсов+аннотация.md
@@ -1,3 +1,7 @@
+[TOC]
+
+
+
 # Тема 2.10 Сайт+Список Интернет-ресурсов+аннотация
 
 
@@ -6,15 +10,19 @@
 
 
 
-# xakep
+## xakep
 
 ![image-20201218125611095](C:\Users\Bkmz\AppData\Roaming\Typora\typora-user-images\image-20201218125611095.png)
 
 ​	Данный сайт содержит литературу о безопасности, новости  в сфере безопасности и IT, а также информацию о уязвимости. Также на сайте имеется огромный список по безопасности во многих ОС таких как Windows ,Linux,Android. Ещё как дополнение можно отметить оборудование которое может навредить безопасности той или иной системе. Примеры приведены на программ защиты и взлома.
 
+​	Содержит в себе полезную информацию о защите от компьютерных вирусов ,и способов их обезвреживания ,а также о работе и принципах заражения.
+
+​	В итоге сайт содержит полезную информации о работе и процедурах заражения что поможет пользователю ПК не заразиться вирусом.
+
 ссылка:https://xakep.ru/category/hack/
 
-# hacker-basement
+## hacker-basement
 
 
 
@@ -22,22 +30,90 @@
 
 ​	Сайт hacker-basement  предоставляет основные знания о компьютерной безопасности и рассказывает как от них защититься и как они работают для построения безопасности. На сайте размещены обзоры и инструкции к полезным утилитам. Ещё есть статьи на тему анонимность , они расскажут о том как быть анонимным в сети, и чтоб нельзя просто было инфицировать человека 
 
+​	Важной информации можно отнести социальную инженерию и способы заражение вирусом . а также на сайте есть полезная информация о защите о взломе серверов и сайтов и как построить от этого защиту.
+
+​	Основном сайт предоставляешь IT информацию о защите и способах взлома.
+
 ссылка:https://hacker-basement.ru/category/socialengineering/
 
-# dotfix
+## dotfix
+
+![image-20201220163944515](C:\Users\Bkmz\AppData\Roaming\Typora\typora-user-images\image-20201220163944515.png)
 
 Небольшой сайт рассказывающий о корректировки программ внедрение в него своего кода  или его изменения , та-же рассказывает как обнаружить изменения как пишется защита и как её протестировать.
 
+​	Основной частью контента сайта посвящена работа с программой и как модифицируют код и как этот код обнаружить.
+
+На сайте можно узнать как не стать жертвой модифицированной версии программе и не поймать какую либо вирус.
+
 ссылка:http://www.dotfix.net/
+
+## antichat
+
+![image-20201220165216942](C:\Users\Bkmz\AppData\Roaming\Typora\typora-user-images\image-20201220165216942.png)
+
+​	Сайт представляет собой форум где каждый может выложить уязвимость и как от неё защититься , на сайте есть информация защиты и методах взлома , заражения.
+
+​	Сайт поможет ознакомиться с основными угрозами и как от них защититься благодаря сообществу сайт постоянно прогрессирует и  развивается ,постоянно на нём появляются новые методы защиты от вирусов.
+
+​	Данный сайт поможет ознакомится и углубиться в компьютерную безопасность.
 
 ссылка:https://forum.antichat.ru
 
+## codeby
+
+![image-20201220165705719](C:\Users\Bkmz\AppData\Roaming\Typora\typora-user-images\image-20201220165705719.png)
+
+​	Сайт содержит множественную информацию об IT . Также сайт делится на две основные части это постыв самого сайта и форума. На форуме можно найти вирусологию от пользователь где можно понять полную структуру вирусов.
+
+​	В основном основная часть про вирусы находится на форуме , и благодаря модерации на сайте содержится строгая политика о написании и контроля статей. 
+
+​	Можно  отметить что на форуме содержаться опасная  и подробная информация о вирусов , что может воспользоваться в злоумышленных целях.
+
 ссылка:https://codeby.net/forums/
 
-ссылка:https://4pda.ru/
+## forumteam.best
+
+![image-20201220173233245](C:\Users\Bkmz\AppData\Roaming\Typora\typora-user-images\image-20201220173233245.png)
+
+​	Сайт представляет из себя форум на множественную тематику где есть вирусология в которой описан принципы работы вирусов и их принцип создания , также выявления угрозы на компьютере и его защита.
+
+​	В части вирусологии имеется большое количество на разные тематики вирусов  , также стоит отметь одну важно часть в которой нет на других сайтах , это как разобрать вирус и как отчистить от него ПК на 100%.
+
+​	Сайт очень полезный и имеет гораздо более сложные тематики и подробную структуру.
+
+ссылка:https://forumteam.best/forums/virusologija.88/
+
+## Lolz.guru
+
+![image-20201220173310819](C:\Users\Bkmz\AppData\Roaming\Typora\typora-user-images\image-20201220173310819.png)
+
+​	 Данный сайт специализируется на множественную тематику, на нём можно найти интересные посты по вирусологии где рассказываются как закрыть уязвимости от вирусов которые очень популярные. 
+
+​	По сайту можно отметить что нужные темы искать только по поиску , и также там идёт активно обсуждение по удалению вирусов с компьютера.
+
+​	Главной особенностью сайта можно отметить дружественное комьюнити которое поможет избавиться от вирусов.
 
 ссылка:https://lolz.guru/
 
-ссылка:https://antichat.com/
+## spy-soft.net
+
+![image-20201220173325105](C:\Users\Bkmz\AppData\Roaming\Typora\typora-user-images\image-20201220173325105.png)
+
+​	Сайт показывает и рассказывает ка защищаться от вирусов и сравнивает разные способы защиты , а также о программах которые могут шифровать соединения и проверять на наличие незаконных подключений.
+
+​	Главной особенностью является что этот сайт рассказывает не для простого пользователя , а для пользователей работающие в IT . Что позволить защитить систему от незаконных действий из вне.
+
+​	Самое главное что на сайте размещена информация о защите пользователей , к примеру  программа WhatsApp , незащищённая что любой может перехватить переписи любого пользователя , на сайте есть на эту тему статья "[Как защитить переписку в WhatsApp](https://spy-soft.net/how-to-protect-whatsapp/)".
 
 ссылка:https://spy-soft.net/category/security/
+
+## vlmi.biz
+
+![image-20201220173340594](C:\Users\Bkmz\AppData\Roaming\Typora\typora-user-images\image-20201220173340594.png)
+
+​	Данный сайт посвящён компьютерной тематики в сфере информационной безопасности , вне рассказывается о вредоносные программы , причины заражения , виды заражаемых объектов и сама защита от вирусов. Также можно найти информацию о безопасности в интернете и многое другое.
+
+​	Интересной остобеностью , что на сайте есть теги которые показываю важность стотьи и её провереность.
+
+ссылка:https://vlmi.biz/threads/kompjuternaja-virusologija.19273/
